namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gketestnamespace
  labels:
    name: geo
